# snake.rs

./: Cargo.toml  README.md  deploy
.cargo/: config.toml
src/: asset_loader.rs  board.rs  camera.rs  collision_detection.rs  colors.rs  despawn.rs  food.rs  main.rs  map.rs  movement.rs  resolution.rs  schedule.rs  score.rs  snake.rs  state.rs  ui.rs  util.rs
