[package]
name = "snake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
rand = "0.8.5"

# enable optimization in debug mode
[profile.dev]
opt-level = 1

# enable high optimizations for dependencies (including bevy)
[profile.dev.package."*"]
opt-level = 3
