[package]
name = "snake"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.0"
bevy_asset_loader = { version = "0.20.0", features = ["2d"] }
itertools = "0.12.1"
rand = "0.8.5"

# enable optimization in debug mode
[profile.dev]
opt-level = 1

# enable high optimizations for dependencies (including bevy)
[profile.dev.package."*"]
opt-level = 3
